advisory africa initial commit

--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -1,158 +1,127 @@
-<script src="https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/js/modaal.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/css/modaal.min.css">
-<style>
-.img-center {
-    display: block;
-    margin: 0 auto;
-    border-radius: 50%;
-}
+<div class="ce_text description_page_programme no_border block show">
+<p class="subtitle_page_programme">Advisory Board</p>
 
-.text-center{
-    text-align: cetner;
-   width: 150px;
-}
+<p><a href="#aa" target="_blank" class="titolo_gc_africa aa">Ayodele Atsenuwa</a>, University of Lagos</p>
+<p class="margin_bottom_20"><a href="#fv" target="_blank" class="titolo_gc_africa fv">Frans Viljoen</a>, University of Pretoria</p>
+ 
+<p><a href="#yb" target="_blank" class="titolo_gc_arab yb">Yousra Abourabi</a>, GC Arab World</p>
+<p class="margin_bottom_20"><a href="#kb" target="_blank" class="titolo_gc_arab kb">Karim Bitar</a>, GC Arab World</p>
 
-.centeredtext{
-    text-align: center;
-}
+<p><a href="#rpv" target="_blank" class="titolo_gc_asia_pacific rpv">Ravi Prakash Vyas</a>, GC Asia Pacific</p>
+<p class="margin_bottom_20"><a href="#as" target="_blank" class="titolo_gc_asia_pacific as">Amalinda Savirani</a>, GC Asia Pacific</p>
 
-.lecturer_name{
-    color: #75716e;
-    text-align: center;
-    margin-bottom: 0px
-}
+<p><a href="#kg" target="_blank" class="titolo_gc_caucasus kg">Kristine Gevorgyan</a>, GC Caucasus</p>
+<p class="margin_bottom_20"><a href="#ag" target="_blank" class="titolo_gc_caucasus ag">Arthur Ghazinyan</a>, GC Caucasus</p>
 
-.margin_bottom_20{
-        color: #75716e;
-}
-</style>
-<div class="ce_text description_page_programme block show">
-<p class="subtitle_page_programme">Editors</p>
-<p><a href="#kaj" target="_blank" class="titolo_gc_europe kaj">Kalliope Agapiou-Josephides</a>, University of Cyprus</p>
-<p><a href="#ca" target="_blank" class="titolo_gc_hq ca">Chiara Altafin</a>, GC Headquarters</p>
-<p><a href="#ab" target="_blank" class="titolo_gc_africa ab">Ashwanee Budoo</a>, University of Pretoria</p>
-<p><a href="#vm" target="_blank" class="titolo_gc_latin_america vm">Veronica Gomez</a>, University of San Martin, Buenos Aires</p>
-<p><a href="#mh" target="_blank" class="titolo_gc_asia_pacific mh">Mike Hayes</a>, Mahidol University</p>
-<p><a href="#tm" target="_blank" class="titolo_gc_europe tm">Thérèse Murphy</a>, Queen's University Belfast</p>
+<p><a href="#hjh" target="_blank" class="titolo_gc_europe hjh">Hans-Joachim Heintze</a>, GC Europe</p>
+<p class="margin_bottom_20"><a href="#wl" target="_blank" class="titolo_gc_europe wl">Wiebke Lamer</a>, GC Europe</p>
 
-<div id="kaj" style="display:none;">
+<p><a href="#cjza" target="_blank" class="titolo_gc_latin_america cjza">Carlos Joel Zelada Acuna</a>, GC Latin America-Caribbean</p>
+<p class="margin_bottom_20"><a href="#rb" target="_blank" class="titolo_gc_latin_america rb">Roberta Baggio</a>, GC Latin America-Caribbean</p>
 
-        <img src="files/eiuc/venice-school/2018/faculty/Kalliope_Agapiou_Josephides_venice_school_eiuc_global_campus-2.jpg" class="img-center" width="110px" >
+<p><a href="#ak" target="_blank" class="titolo_gc_south_east_europe ak">Anna Krasteva</a>, GC South East Europe</p>
+<p class="margin_bottom_20"><a href="#amu" target="_blank" class="titolo_gc_south_east_europe amu">Asim Mujkić</a>, GC South East Europe</p>
 
-        <p class="subtitle_page_programme lecturer_name">Kalliope Agapiou-Josephides</p>
+<p><a href="#gu" target="_blank" class="gu titolo_gc_hq">George Ulrich</a>, GC Academic Director</p>
 
-        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Human Rights Prearedness Founding Editor</span></p>
 
-        <p class="margin_bottom_20">Kalliope Agapiou Josephides, PhD in Political Science, Paris I Panthéon - Sorbonne University, is a Jean Monnet Chair holder (2001) and Assistant Professor at the University of Cyprus. She sits on the Council of the Global Campus of Human Rights and is the European Master’s Director for the University of Cyprus.</p>
 
-        <p class="margin_bottom_20">She served as chair of the European Institute for Gender Equality (EU Agency) and Vice- President of the European Inter University Centre for Human Rights and Democratisation. She is a founding member of the Mediterranean Women Mediators Network, and a member of the scientific advisory board of the European Yearbook of Human Rights.</p>
 
-        <p class="margin_bottom_20">She has a great interest, and long experience, in the nexus of human rights and gender equality. She has participated in and led several national and international research projects. She served as lead author in the <em>United Nations Global Study on Children Deprived of Liberty</em> and the European Parliament study on <em>Women’s Rights During Democratic Transitions</em>. She has served as academic convener/speaker at high-level international events and has taught/delivered lectures around the world.</p>
+
+<div id="aa" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Ayodele-Atsenuwa_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Ayodele Atsenuwa</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_africa"><span class="titolo_gc_africa">University of Lagos</span></p>
+
+        <p class="margin_bottom_20">Ayodele Atsenuwa is Professor of Law at the University of Lagos and a member of the network that delivers the Master’s in Human Rights and Democratisation in Africa.</p>
+
+        <p class="margin_bottom_20">Her research interests are human rights, gender and the law, criminal law and criminal justice, and health law.</p>
+
+        <p class="margin_bottom_20">She is a member of the Nigerian Association of Law Teachers and the African Consortium on Law and Religion. Her publications include ‘Promoting sexual and reproductive rights through legislative interventions: a case study of child rights legislation and early marriage in Nigeria’ in Ngwena and Durojaiye (eds), <em>Strengthening Protection of Sexual and Reproductive Health and Rights in the African Region through Human Rights</em> (Pretoria: PULP, 2014).</p>
 
 </div>
 
-<div id="ca" style="display:none;">
+<div id="fv" style="display:none;">
 
-        <img src="files/eiuc/chiara_altafin.jpg" class="img-center" width="110px" >
+        <img src="files/eiuc/mooclgbti/Frans-Viljoen.jpg" class="img-center" width="110px" >
 
-        <p class="subtitle_page_programme lecturer_name">Chiara Altafin</p>
-
-        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_hq"><span class="titolo_gc_hq">GC Headquarters</span></p>
-
-        <p class="margin_bottom_20">Chiara Altafin is research manager at the Global Campus Headquarters in Venice, where she worked as one of the lead researchers on the UN Global Study on Children Deprived of Liberty, and as senior researcher on the FP7 project 'Fostering Human Rights Among European (External and Internal) Policies'. She has been a teaching fellow for the European Master’s in Human Rights and Democratisation since September 2015.</p>
-
-        <p class="margin_bottom_20">She holds a PhD in International Law and an LLM in Comparative, European and International Laws, both from the European University Institute, and a Master’s in Rule of Law, Democracy and Human Rights from LUISS University. She graduated cum laude at the Law Department of Roma Tre University and has been admitted to the Italian Bar.</p>
-
-	<p class="margin_bottom_20">Her main research interests are: children’s rights; economic, social and cultural rights in times of crisis, including in contexts of armed conflict and occupation; business and human rights; social justice; and environmental justice.</p>
-</div>
-<div id="ab" style="display:none;">
-
-        <img src="files/eiuc/hrp/ashwanee_badoo_gchumanrights.png" class="img-center" width="110px" >
-
-        <p class="subtitle_page_programme lecturer_name">Ashwanee Budoo</p>
+        <p class="subtitle_page_programme lecturer_name">Frans Viljoen</p>
 
         <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_africa"><span class="titolo_gc_africa">University of Pretoria</span></p>
 
-        <p class="margin_bottom_20">Dr Ashwanee Budoo is programme manager of the Master’s in Human Rights and Democratisation in Africa at the Centre for Human Rights, University of Pretoria. </p>
+        <p class="margin_bottom_20">Professor Frans Viljoen is director of the Centre for Human Rights at the University of Pretoria. He is the Programme Director of the Master’s in Human Rights and Democratisation in Africa, and a vice-president of the Global Campus of Human Rights. He studied law at the University of Pretoria and Cambridge University.</p>
 
-        <p class="margin_bottom_20">She is a women’s rights advocate with research interests in the African human rights system, with a focus on the rights of women and girls.</p>
+        <p class="margin_bottom_20">His research area is international human rights law, with a focus on the African regional human rights system. </p>
 
-        <p class="margin_bottom_20">She also teaches on different programmes and supervises master's, doctoral and undergraduate students. </p> 
-
-</div>
-<div id="vm" style="display:none;">
-
-        <img src="https://gchumanrights.org/files/eiuc/img_global_campus_chair.jpg" class="img-center" width="110px" >
-
-        <p class="subtitle_page_programme lecturer_name">Veronica Gomez</p>
-
-        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_latin_america"><span class="titolo_gc_latin_america">University of San Martin, Buenos Aires</span></p>
-
-        <p class="margin_bottom_20">Professor Veronica Gomez is President of the Global Campus of Human Rights. </p>
-
-        <p class="margin_bottom_20">She is professor of law at the University of San Martin (UNSAM). She is director for education at Global Campus Latin America (LATMA) in Buenos Aires (2011-). She is responsible for various international human rights programmes with the participation of regional stakeholders. She holds a degree in international law (UBA) and an LLM (Nottingham). </p>
-
-        <p class="margin_bottom_20">Her field of expertise is in the area of international and regional protection of human rights, and genetics and human rights.</p>
-
-        <p class="margin_bottom_20">Her professional path includes her role as Principal Specialist at the Inter-American Commission of Human Rights of the Organisation of American States in Washington DC (1998-2009) and as a Senior Advisor on Human Rights at the Ministry of Foreign Affairs of Argentina (2010-2011). </p>
-
-</div>
-<div id="mh" style="display:none;">
-
-        <img src="files/eiuc/apma/lecturers/Mike_Hayes_gchumanrights.jpg" class="img-center" width="110px" >
-
-        <p class="subtitle_page_programme lecturer_name">Mike Hayes</p>
-
-        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_asia_pacific"><span class="titolo_gc_asia_pacific">Mahidol University</span></p>
-
-        <p class="margin_bottom_20">Dr Mike Hayes is a lecturer at the Institute for Human Rights and Peace Studies at Mahidol University's Salaya Campus. He is the programme chair of APMA, the Asia Pacific Master’s in Human Rights and Democratisation. </p>
-
-        <p class="margin_bottom_20">He has been active in developing the capacity of lecturers to teach and research human rights at higher education institutions in Southeast Asia. </p>
-
-        <p class="margin_bottom_20">His research interests include migration, non-citizens and human rights advocacy.   </p>
+        <p class="margin_bottom_20">He is editor of the <em>African Human Rights Law Journal</em>, the <em>African Human Rights Yearbook</em> and <em>Global Campus Human Rights Journal.</em></p>
 
 </div>
 
-
-<div id="tm" style="display:none;">
-
-        <img src="files/eiuc/ema/Therese_Murphy_gchumanrights3.png" class="img-center" width="110px" >
-
-        <p class="subtitle_page_programme lecturer_name">Thérèse Murphy</p>
-
-        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Human Rights Prearedness Founding Editor</span></p>
-
-        <p class="margin_bottom_20">Thérèse Murphy is professor of law and director of the Health & Human Rights Unit at Queen’s University Belfast. She is also chairperson of the European Master's on Human Rights and Democratisation, and serves on the Council of the Global Campus of Human Rights. A former Fulbright fellow, she studied law at University College Dublin and the University of Cambridge, and was admitted to the bar at King’s Inns, Dublin.</p>
-
-        <p class="margin_bottom_20">Her field of expertise is human rights law and practice, with particular interests in health, science and technology, and human rights method. </p>
-
-        <p class="margin_bottom_20">She is a member of the editorial board of the <em>Human Rights Law Review</em>, associate editor of <em>BMC International Health & Human Rights</em> and co-editor of the Bloomsbury/Hart book series, Law and Health. She sits on the Moral & Ethical Advisory Group established by the UK’s Department of Health and Social Care.</p>
-
 </div>
-</div>
+
 <script>
-$(".kaj").modaal({
-content_source: '#kaj'
+$(".aa").modaal({
+content_source: '#aa'
 });
 
-$(".tm").modaal({
-content_source: '#tm'
-});
-</script>
-<script>
-$(".ca").modaal({
-content_source: '#ca'
+$(".fv").modaal({
+content_source: '#fv'
 });
 
-$(".ab").modaal({
-content_source: '#ab'
+$(".yb").modaal({
+content_source: '#yb'
 });
 
-$(".vm").modaal({
-content_source: '#vm'
+$(".kb").modaal({
+content_source: '#kb'
 });
 
-$(".mh").modaal({
-content_source: '#mh'
+$(".rpv").modaal({
+content_source: '#rpv'
 });
+
+$(".as").modaal({
+content_source: '#as'
+});
+
+$(".kg").modaal({
+content_source: '#kg'
+});
+
+$(".ag").modaal({
+content_source: '#ag'
+});
+
+$(".hjh").modaal({
+content_source: '#hjh'
+});
+
+$(".wl").modaal({
+content_source: '#wl'
+});
+
+$(".cjza").modaal({
+content_source: '#cjza'
+});
+
+$(".rb").modaal({
+content_source: '#rb'
+});
+
+$(".ak").modaal({
+content_source: '#ak'
+});
+
+$(".amu").modaal({
+content_source: '#amu'
+});
+
+
+$(".gu").modaal({
+content_source: '#gu'
+});
+
 </script>
