arab world adivsory initial commit

--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -4,8 +4,8 @@
 <p><a href="#aa" target="_blank" class="titolo_gc_africa aa">Ayodele Atsenuwa</a>, University of Lagos</p>
 <p class="margin_bottom_20"><a href="#fv" target="_blank" class="titolo_gc_africa fv">Frans Viljoen</a>, University of Pretoria</p>
  
-<p><a href="#yb" target="_blank" class="titolo_gc_arab yb">Yousra Abourabi</a>, GC Arab World</p>
-<p class="margin_bottom_20"><a href="#kb" target="_blank" class="titolo_gc_arab kb">Karim Bitar</a>, GC Arab World</p>
+<p><a href="#yb" target="_blank" class="titolo_gc_arab yb">Yousra Abourabi</a>, University of Rabat</p>
+<p class="margin_bottom_20"><a href="#kb" target="_blank" class="titolo_gc_arab kb">Karim Bitar</a>, Saint Joseph University of Beirut</p>
 
 <p><a href="#rpv" target="_blank" class="titolo_gc_asia_pacific rpv">Ravi Prakash Vyas</a>, GC Asia Pacific</p>
 <p class="margin_bottom_20"><a href="#as" target="_blank" class="titolo_gc_asia_pacific as">Amalinda Savirani</a>, GC Asia Pacific</p>
@@ -56,7 +56,39 @@
 
         <p class="margin_bottom_20">His research area is international human rights law, with a focus on the African regional human rights system. </p>
 
-        <p class="margin_bottom_20">He is editor of the <em>African Human Rights Law Journal</em>, the <em>African Human Rights Yearbook</em> and <em>Global Campus Human Rights Journal.</em></p>
+        <p class="margin_bottom_20">He is editor of the <em>African Human Rights Law Journal</em>, the <em>African Human Rights Yearbook</em> and <em>Global Campus Human Rights Journal</em>.</p>
+
+</div>
+
+<div id="yb" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Yousra-Abourabi_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Yousra Abourabi</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_arab"><span class="titolo_gc_arab">University of Rabat</span></p>
+
+        <p class="margin_bottom_20">Yousra Abourabi studied political science and international relations at the Universities of Lyon II Lumière and Jean Moulin Lyon III in France. From 2015 to 2017, she was a visiting lecturer at SciencesPo Rabat – International University of Rabat, Morocco, where she is currently an assistant professor of political science and international relations. She is a member of Council of the Global Campus of Human Rights.</p>
+
+        <p class="margin_bottom_20">She conducts research on African governance in the areas of climate change, gender and migration as a research associate at the Laboratoire d'Etudes Politiques et de Sciences Humaines et Sociales at SciencesPo Rabat. </p>
+
+        <p class="margin_bottom_20">She is a visiting professor at SciencesPo Grenoble, a member of the Political Affairs cluster of the Economic, Social and Cultural Cluster of the African Union, and a Fellow at the Käte Hamburger Center ‘Law as Culture’ in Bonn.</p>
+
+</div>
+
+<div id="kb" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Karim-Bitar_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Karim Bitar</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_arab"><span class="titolo_gc_arab">University of Rabat</span></p>
+
+        <p class="margin_bottom_20">Karim Emile Bitar is acting director of the Institute of Political Science at the Saint Joseph University of Beirut (USJ) and director of the Arab Master's in Democracy and Human Rights.</p>
+
+        <p class="margin_bottom_20">He is a professor of international relations at USJ, at Ecole Normale Supérieure de Lyon (ENS) and at the Institute for International and Strategic Relations in Paris. </p>
+
+        <p class="margin_bottom_20">He is an associate fellow at the Geneva Centre for Security Policy in Switzerland, and the editor of L’ENA hors les murs, a monthly public affairs magazine. He is an alumnus of France’s Ecole Nationale d’Administration (Cyrano de Bergerac Cohort, 1997-1999).</p>
 
 </div>
 
