asia pacific initial commit

--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -7,8 +7,8 @@
 <p><a href="#yb" target="_blank" class="titolo_gc_arab yb">Yousra Abourabi</a>, University of Rabat</p>
 <p class="margin_bottom_20"><a href="#kb" target="_blank" class="titolo_gc_arab kb">Karim Bitar</a>, Saint Joseph University of Beirut</p>
 
-<p><a href="#rpv" target="_blank" class="titolo_gc_asia_pacific rpv">Ravi Prakash Vyas</a>, GC Asia Pacific</p>
-<p class="margin_bottom_20"><a href="#as" target="_blank" class="titolo_gc_asia_pacific as">Amalinda Savirani</a>, GC Asia Pacific</p>
+<p><a href="#rpv" target="_blank" class="titolo_gc_asia_pacific rpv">Ravi Prakash Vyas</a>, Kathmandu School of Law</p>
+<p class="margin_bottom_20"><a href="#as" target="_blank" class="titolo_gc_asia_pacific as">Amalinda Savirani</a>, Universitas Gadjah Mada</p>
 
 <p><a href="#kg" target="_blank" class="titolo_gc_caucasus kg">Kristine Gevorgyan</a>, GC Caucasus</p>
 <p class="margin_bottom_20"><a href="#ag" target="_blank" class="titolo_gc_caucasus ag">Arthur Ghazinyan</a>, GC Caucasus</p>
@@ -89,6 +89,38 @@
         <p class="margin_bottom_20">He is a professor of international relations at USJ, at Ecole Normale Supérieure de Lyon (ENS) and at the Institute for International and Strategic Relations in Paris. </p>
 
         <p class="margin_bottom_20">He is an associate fellow at the Geneva Centre for Security Policy in Switzerland, and the editor of L’ENA hors les murs, a monthly public affairs magazine. He is an alumnus of France’s Ecole Nationale d’Administration (Cyrano de Bergerac Cohort, 1997-1999).</p>
+
+</div>
+
+<div id="rpv" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Ravi-Prakash-Vyas_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Ravi Prakash Vyas</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_asia_pacific"><span class="titolo_gc_asia_pacific">Kathmandu School of Law</span></p>
+
+        <p class="margin_bottom_20">Ravi Prakash Vyas is an assistant professor of international law and human rights at Kathmandu School of Law. He is also programme coordinator of the Asia Pacific Master’s in Human Rights and Democratisation. Previously, he worked as a consultant (proceedings) at the National Human Rights Commission of India.</p>
+
+        <p class="margin_bottom_20">He is a qualified advocate eligible to practice in the Supreme Court of India. He holds a law degree from India and a master’s in human rights and democratisation from the University of Sydney.</p>
+
+        <p class="margin_bottom_20">He is executive director at the Asian Association of Law Professors and managing editor of <em>Kathmandu School of Law Review</em>.</p>
+
+</div>
+
+<div id="as" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Amalinda-Savirani_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Amalinda Savirani</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_asia_pacific"><span class="titolo_gc_asia_pacific">Universitas Gadjah Mada</span></p>
+
+        <p class="margin_bottom_20">Amalinda Savirani is an associate professor at the Department of Politics and Government in the Faculty of Social and Political Sciences at the Universitas Gadjah Mada. She has served as head of department since 2016. </p>
+
+        <p class="margin_bottom_20">Her research interests cover issues of social and political movement among marginal groups such as the urban poor, labour, and women’s political participation, and their linkages to political representative institutions.</p>
+
+        <p class="margin_bottom_20">She has been a visiting fellow at the Australian National University and the University of Melbourne. </p>
 
 </div>
 
