--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -10,11 +10,11 @@
 <p><a href="#rpv" target="_blank" class="titolo_gc_asia_pacific rpv">Ravi Prakash Vyas</a>, Kathmandu School of Law</p>
 <p class="margin_bottom_20"><a href="#as" target="_blank" class="titolo_gc_asia_pacific as">Amalinda Savirani</a>, Universitas Gadjah Mada</p>
 
-<p><a href="#kg" target="_blank" class="titolo_gc_caucasus kg">Kristine Gevorgyan</a>, GC Caucasus</p>
-<p class="margin_bottom_20"><a href="#ag" target="_blank" class="titolo_gc_caucasus ag">Arthur Ghazinyan</a>, GC Caucasus</p>
+<p><a href="#aal" target="_blank" class="titolo_gc_caucasus aal">Ashot Aleksanyan</a>, Yerevan State University</p>
+<p class="margin_bottom_20"><a href="#kg" target="_blank" class="titolo_gc_caucasus kg">Kristine Gevorgyan</a>, Yerevan State University</p>
 
-<p><a href="#hjh" target="_blank" class="titolo_gc_europe hjh">Hans-Joachim Heintze</a>, GC Europe</p>
-<p class="margin_bottom_20"><a href="#wl" target="_blank" class="titolo_gc_europe wl">Wiebke Lamer</a>, GC Europe</p>
+<p><a href="#hjh" target="_blank" class="titolo_gc_europe hjh">Hans-Joachim Heintze</a>, Ruhr University of Bochum</p>
+<p class="margin_bottom_20"><a href="#wl" target="_blank" class="titolo_gc_europe wl">Wiebke Lamer</a>, GC Headquarters</p>
 
 <p><a href="#cjza" target="_blank" class="titolo_gc_latin_america cjza">Carlos Joel Zelada Acuna</a>, GC Latin America-Caribbean</p>
 <p class="margin_bottom_20"><a href="#rb" target="_blank" class="titolo_gc_latin_america rb">Roberta Baggio</a>, GC Latin America-Caribbean</p>
@@ -124,6 +124,68 @@
 
 </div>
 
+<div id="aal" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Ashot_Aleksanyan_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Ashot Aleksanyan</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_caucasus"><span class="titolo_gc_caucasus">Yerevan State University</span></p>
+
+        <p class="margin_bottom_20">Ashot Aleksanyan is a Doctor of Politics, Professor at the Chair of Theory and History of Political Science of Faculty of International Relations, as well as Lecturer and Expert of the Center for European Studies of Yerevan State University.</p>
+
+        <p class="margin_bottom_20">His main interests are civil society, social partnership, and political rights and freedoms. </p>
+
+        <p class="margin_bottom_20">He has been a DAAD-Visiting Scientist at the Institute of Political Science of Leibniz University of Hannover (2002, 2003, 2008, 2009), the Geschwister Scholl Institute of Political Science of Ludwig-Maximilian University of Munich (2013) and the Institute for East European Studies of Free University of Berlin (2016), as well as the EU Erasmus Mundus «ALRAKIS» project Visiting Scientist at the Faculty of Social Sciences of the Katholieke Universiteit Leuven (2012) and the EU Erasmus Mundus «EMBER» project Visiting Scientist at the Institute of Political Science of the Friedrich-Schiller-University Jena (2016-2019). </p>
+
+</div>
+
+<div id="kg" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Kristine-Gevorgyan_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Kristine Gevorgyan</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_caucasus"><span class="titolo_gc_caucasus">Yerevan State University</span></p>
+
+        <p class="margin_bottom_20">Kristine Gevorgyan is coordinator of the Global Campus Caucasus programme at the Centre for European Studies, Yerevan State University. </p>
+
+        <p class="margin_bottom_20">She holds a Master’s degree in Euroculture from Uppsala University, and Master’s and Bachelor’s degrees in English Philology from Yerevan State University. </p>
+
+        <p class="margin_bottom_20">Her research interests are cognitive linguistics, memory, linguistic rights and education. She is a member of the Erasmus+ Higher Education Reform Experts’ group (Armenia). </p>
+
+</div>
+
+<div id="hjh" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Hans-Joachim-Heintze_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Hans-Joachim Heintze</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">Ruhr University of Bochum</span></p>
+
+        <p class="margin_bottom_20">Hans-Joachim Heintze is professor of international law at the Ruhr University of Bochum. He is vice-chair of the European Master’s in Human Rights and Democratisation, and Bochum's director of the European Master’s programme Network on Humanitarian Action. He sits on the board of the European Master’s programme in Human Rights and Democratisation in South East Europe (Sarajevo).</p>
+
+        <p class="margin_bottom_20">He studied law and published a doctoral thesis on the law of state succession. He joined the Ruhr University in 1990 and teaches at the Institute for International Law of Peace and Armed Conflict.</p>
+
+        <p class="margin_bottom_20">His research interests are human rights, international humanitarian law and disaster response law.</p>
+
+</div>
+
+<div id="wl" style="display:none;">
+
+        <img src="https://gchumanrights.org/files/eiuc/ema/wiebke-lamer-eiuc-global-campus.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Wiebke Lamer</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_europe"><span class="titolo_gc_europe">GC Headquarters</span></p>
+
+        <p class="margin_bottom_20">Dr Wiebke Lamer is programme director of the European Master’s in Human Rights and Democratisation. She holds a PhD in international studies from Old Dominion University in the US, and Master’s degrees in international relations and US foreign policy from the University of Leicester and the University of London, respectively. Her undergraduate degree was in media studies and American studies. </p>
+
+        <p class="margin_bottom_20">She has research interests in press and media freedom, media and democracy, information disorder, democracy in international relations, and new technologies and human rights. Her first book, <em>Press Freedom as an International Human Right</em>, was published by Palgrave Macmillan in 2018.</p>
+
+</div>
+
 </div>
 
 <script>
@@ -151,12 +213,12 @@ $(".as").modaal({
 content_source: '#as'
 });
 
-$(".kg").modaal({
-content_source: '#kg'
+$(".aal").modaal({
+content_source: '#aal'
 });
 
-$(".ag").modaal({
-content_source: '#ag'
+$(".kg").modaal({
+content_source: '#kg'
 });
 
 $(".hjh").modaal({
