meet the team final commit

--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -16,13 +16,13 @@
 <p><a href="#hjh" target="_blank" class="titolo_gc_europe hjh">Hans-Joachim Heintze</a>, Ruhr University of Bochum</p>
 <p class="margin_bottom_20"><a href="#wl" target="_blank" class="titolo_gc_europe wl">Wiebke Lamer</a>, GC Headquarters</p>
 
-<p><a href="#cjza" target="_blank" class="titolo_gc_latin_america cjza">Carlos Joel Zelada Acuna</a>, GC Latin America-Caribbean</p>
-<p class="margin_bottom_20"><a href="#rb" target="_blank" class="titolo_gc_latin_america rb">Roberta Baggio</a>, GC Latin America-Caribbean</p>
+<p><a href="#cjza" target="_blank" class="titolo_gc_latin_america cjza">Carlos Joel Zelada Acuna</a>,  Universidad del Pacífico</p>
+<p class="margin_bottom_20"><a href="#rb" target="_blank" class="titolo_gc_latin_america rb">Roberta Camineiro Baggio</a>, Universidade Federal do Rio Grande do Sul</p>
 
-<p><a href="#ak" target="_blank" class="titolo_gc_south_east_europe ak">Anna Krasteva</a>, GC South East Europe</p>
-<p class="margin_bottom_20"><a href="#amu" target="_blank" class="titolo_gc_south_east_europe amu">Asim Mujkić</a>, GC South East Europe</p>
+<p><a href="#ak" target="_blank" class="titolo_gc_south_east_europe ak">Anna Krasteva</a>, New Bulgarian University</p>
+<p class="margin_bottom_20"><a href="#amu" target="_blank" class="titolo_gc_south_east_europe amu">Asim Mujkić</a>, University of Sarajevo</p>
 
-<p><a href="#gu" target="_blank" class="gu titolo_gc_hq">George Ulrich</a>, GC Academic Director</p>
+<p><a href="#gu" target="_blank" class="gu titolo_gc_hq">George Ulrich</a>, GC Headquarters</p>
 
 
 
@@ -30,7 +30,7 @@
 
 <div id="aa" style="display:none;">
 
-        <img src="files/eiuc/hrp/adivisory/Ayodele-Atsenuwa_gchumanrights.jpg" class="img-center" width="110px" >
+        <img src="files/eiuc/hrp/adivisory/Ayodele-Atsenuwa_gchumanrights_2.jpg" class="img-center" width="110px" >
 
         <p class="subtitle_page_programme lecturer_name">Ayodele Atsenuwa</p>
 
@@ -174,7 +174,7 @@
 
 <div id="wl" style="display:none;">
 
-        <img src="https://gchumanrights.org/files/eiuc/ema/wiebke-lamer-eiuc-global-campus.jpg" class="img-center" width="110px" >
+        <img src="files/eiuc/ema/wiebke-lamer-eiuc-global-campus.jpg" class="img-center" width="110px" >
 
         <p class="subtitle_page_programme lecturer_name">Wiebke Lamer</p>
 
@@ -183,6 +183,86 @@
         <p class="margin_bottom_20">Dr Wiebke Lamer is programme director of the European Master’s in Human Rights and Democratisation. She holds a PhD in international studies from Old Dominion University in the US, and Master’s degrees in international relations and US foreign policy from the University of Leicester and the University of London, respectively. Her undergraduate degree was in media studies and American studies. </p>
 
         <p class="margin_bottom_20">She has research interests in press and media freedom, media and democracy, information disorder, democracy in international relations, and new technologies and human rights. Her first book, <em>Press Freedom as an International Human Right</em>, was published by Palgrave Macmillan in 2018.</p>
+
+</div>
+
+<div id="cjza" style="display:none;">
+
+        <img src="files/eiuc/mooclgbti/Carlos_Zelada_global_campus_eiuc.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Carlos Joel Zelada Acuna</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_latin_america"><span class="titolo_gc_latin_america">Universidad del Pacífico</span></p>
+
+        <p class="margin_bottom_20">Carlos J. Zelada is chair of the Academic Department of Law at the Universidad del Pacífico where he teaches international and human rights law. He is a member of the scientific committee of LATMA, the Master’s in Human Rights and Democratisation in Latin America and the Caribbean.</p>
+
+        <p class="margin_bottom_20">He is a graduate (Abogado) from the Pontificia Universidad Católica del Perú and holds a Master of Laws degree from Harvard University.</p>
+
+        <p class="margin_bottom_20">Professor Zelada’s research uses interdisciplinary materials from sociology, history and social theory to explore issues of development and structural discrimination. </p>
+
+</div>
+
+<div id="rb" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Roberta-Baggio_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Roberta Camineiro Baggio</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_latin_america"><span class="titolo_gc_latin_america">Universidade Federal do Rio Grande do Sul</span></p>
+
+        <p class="margin_bottom_20">Roberta Camineiro Baggio is Professor at the Law School at Universidade Federal do Rio Grande do Sul (UFRGS) in Brazil, and a professor within the Master’s Programme in Human Rights and Democratisation in Latin America and the Caribbean (LATMA), which is part of the Global Campus of Human Rights.</p>
+
+        <p class="margin_bottom_20">She graduated in law at the Universidade Federal de Uberlândia (UFU), has a master’s in law from the Universidade do Vale do Rio dos Sinos (UNISINOS), and a PhD in law from the Universidade Federal de Santa Catarina (UFSC).</p>
+
+        <p class="margin_bottom_20">Her research interests are constitutionalism in Latin America, and migration and refugees.</p>
+
+        <p class="margin_bottom_20">She is the coordinator of the Chair Sérgio Vieira de Mello (UNHCR) and the Clinical Law and Support Group for Immigrants and Refugees (GAIRE) at the Universidade Federal do Rio Grande do Sul.</p>
+
+</div>
+
+<div id="ak" style="display:none;">
+
+        <img src="files/eiuc/hrp/adivisory/Anna-Krasteva_gchumanrights.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Anna Krasteva</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_south_east_europe"><span class="titolo_gc_south_east_europe">Universidade Federal do Rio Grande do Sul</span></p>
+
+        <p class="margin_bottom_20">Anna Krasteva is professor and member of the Board of ERMA (University of Sarajevo and University of Bologna), and a doctor honoris causa of the University of Lille. She led the Global Campus project, ‘Securitization and its impact on human rights and human security’. </p>
+
+        <p class="margin_bottom_20">Her main fields of research and teaching are migration policies and politics, far-right populism and youth extremism, and civic mobilisations and citizenship. </p>
+
+        <p class="margin_bottom_20">She is editor-in-chief of <em>Southeastern Europe</em>, and a member of the editorial board of <em>Nationalism and Ethnic Politics</em>. Her recent publications include the co-edited book, <em>Citizens’ Activism and Solidarity Movements: Contending with Populism</em>.</p>
+
+</div>
+
+<div id="amu" style="display:none;">
+
+        <img src="files/eiuc/Asim_Mujkic.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">Asim Mujkić</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_south_east_europe"><span class="titolo_gc_south_east_europe">University of Sarajevo</span></p>
+
+        <p class="margin_bottom_20">Asim Mujkić is a full professor at the Faculty of Political Sciences at the University of Sarajevo, and co-director of ERMA, the European Regional Master’s Programme in Democracy and Human Rights in South East Europe.</p>
+
+        <p class="margin_bottom_20">He teaches philosophy, and ethics and the political elites.</p>
+
+</div>
+
+<div id="gu" style="display:none;">
+
+        <img src="files/eiuc/george_ulrich.jpg" class="img-center" width="110px" >
+
+        <p class="subtitle_page_programme lecturer_name">George Ulrich</p>
+
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_hq"><span class="titolo_gc_hq">GC Headquarter</span></p>
+
+        <p class="margin_bottom_20">Professor George Ulrich is Academic Director of the Global Campus of Human Rights. Previously, from 2009-2016, he was Rector and Professor of Human Rights at the Riga Graduate School of Law. He studied philosophy at the University of Toronto, and social anthropology and history of ideas at Aarhus University. </p>
+
+        <p class="margin_bottom_20">His research interests include the history and philosophy of human rights, human rights diplomacy, human rights and development cooperation, health and human rights, international medical ethics, and ethics for human rights professionals. </p>
+
+        <p class="margin_bottom_20">A key focus of his teaching is to equip students to effectively engage with expressions of human rights scepticism.</p>
 
 </div>
 
