--- a/website/06-Stories-HRP/pages/04-media-toolkit/04-media-toolkit.html
+++ b/website/06-Stories-HRP/pages/04-media-toolkit/04-media-toolkit.html
@@ -1,52 +1,15 @@
 <!-- HEADER TRAILER -->
 <div class="video169_container">
-    <iframe class="video169" src="https://www.youtube.com/embed/ydLxRmB5ETU" frameborder="0" allowfullscreen=""></iframe>
+    <img class="video169" src="files/eiuc/hrp/mediatoolkit/imgs/gc_human_rights_preparedness_mediatoolkit.png">
 </div>
 
-<div class="video169_container">
-    <img class="video169" src="files/eiuc/hrp/mediatoolkit/imgs/media-toolkit-header.jpg">
-</div>
-
-
-<!-- VIDEO TRAILER -->
-<div class="table_accordion_cell">
-    <div class="accordion accordion_gc">
-        <div class="icon_e_title_accordion">
-            <p class="title_accordion">Video Teaser</p>
-            <p class="number_universities">[nbsp]</p>
-            <div class="piu_accordion">
-                <div class="verticale">[nbsp]</div>
-                <div class="orizzontale">[nbsp]</div>
-            </div>
-        </div>
-        <div class="list_accordion">
-            <p class="margin_bottom_20 ">YouTube Video Teaser: <a class="titolo_gc_europe" href="https://www.youtube.com/watch?v=ydLxRmB5ETU" target="_blank">https://www.youtube.com/watch?v=ydLxRmB5ETU</a></p>
-        </div>
-    </div>
-</div>
-
-
-<!-- SHORT CLIPS -->
-<div class="table_accordion_cell">
-    <div class="accordion accordion_gc">
-        <div class="icon_e_title_accordion">
-            <p class="title_accordion">Short Clips</p>
-            <p class="number_universities">[nbsp]</p>
-            <div class="piu_accordion">
-                <div class="verticale">[nbsp]</div>
-                <div class="orizzontale">[nbsp]</div>
-            </div>
-        </div>
-        <div class="list_accordion"><iframe src="https://drive.google.com/embeddedfolderview?id=1EmoV3tEVQ2XX96AARe_AVTEWoluMLtNc#grid" style="width:100%; height:600px; border:0;"></iframe>/div>
-    </div>
-</div>
 
 
 <!-- NEWS -->
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
-            <p class="title_accordion">News</p>
+            <p class="title_accordion">e-News</p>
             <p class="number_universities">[nbsp]</p>
             <div class="piu_accordion">
                 <div class="verticale">[nbsp]</div>
@@ -54,7 +17,12 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20 "><a class="titolo_gc_europe" href="news-events/latest-news/news-detail-page/mooc-on-citizenship-and-human-rights-education-for-change.html" target="_blank">News for websites</a></p>
+            <p class="margin_bottom_20">This document contains the official e-News about the GC <em>Human Rights Preparedness</em>.</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1CHIYk87qmWvdbNuWgn6-6OmgzLXLVXhD/preview"></iframe></div>
+            <p>[nbsp]</p>
+            <div class="download"><a href="https://drive.google.com/file/d/1CHIYk87qmWvdbNuWgn6-6OmgzLXLVXhD/view?usp=sharing" target="_blank" download="e-News - GC Human Rights Preparedness.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/file/d/1CHIYk87qmWvdbNuWgn6-6OmgzLXLVXhD/view?usp=sharing" target="_blank" download="e-News - GC Human Rights Preparedness.pdf">Download</a></p>
+            </div>
         </div>
     </div>
 </div>
@@ -72,11 +40,11 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">This document contains the official Poster for the MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em>. It can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
-            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3/preview"></iframe></div>
+            <p class="margin_bottom_20">This document contains the official Poster about the GC <em>Human Rights Preparedness</em>. It can be printed[nbsp]on both sides[nbsp]and in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1nC3pTbgdIP22So_S1A3lW5mM3Z_6TPnF/preview"></iframe></div>
             <p>[nbsp]</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3" target="_blank" download="Poster MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="1IIJfspFCMz93kkH0diSm1Gm-irqIqZp3" target="_blank" download="Poster MOOC PPHR 2020.pdf">Download</a></p>
+            <div class="download"><a href="https://drive.google.com/file/d/1nC3pTbgdIP22So_S1A3lW5mM3Z_6TPnF/view?usp=sharing" target="_blank" download="Poster - GC Human Rights Preparedness.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/file/d/1nC3pTbgdIP22So_S1A3lW5mM3Z_6TPnF/view?usp=sharing" target="_blank" download="Poster - GC Human Rights Preparedness.pdf">Download</a></p>
             </div>
         </div>
     </div>
@@ -95,11 +63,11 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">This document contains the official Info Sheet about the MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em>. It can be printed in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
-            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ/preview"></iframe></div>
+            <p class="margin_bottom_20">This document contains the official Info Sheet about the GC <em>Human Rights Preparedness</em>. It can be printed in different sizes [from A5 (148 × 210 mm) to A2 (420 x 594 mm)]</p>
+            <div class="box_vertical_a4_container"><iframe class="box_vertical_a4" src="https://drive.google.com/file/d/1KCpHpszXYrmKW8tU0ahYvpp2xVShPrT9/preview"></iframe></div>
             <p>[nbsp]</p>
-            <div class="download"><a href="https://drive.google.com/open?id=1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/open?id=1fwxJWWVKcVFC4h3CLEJFJ5jUiNjVMMQZ" target="_blank" download="Info Sheet MOOC PPHR 2020.pdf">Download</a></p>
+            <div class="download"><a href="https://drive.google.com/file/d/1KCpHpszXYrmKW8tU0ahYvpp2xVShPrT9/view?usp=sharing" target="_blank" download="Info Sheet - GC Human Rights Preparedness.pdf"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="https://drive.google.com/file/d/1KCpHpszXYrmKW8tU0ahYvpp2xVShPrT9/view?usp=sharing" target="_blank" download="Info Sheet - GC Human Rights Preparedness.pdf">Download</a></p>
             </div>
         </div>
     </div>
@@ -136,8 +104,8 @@
         <div class="list_accordion">
             <p class="margin_bottom_20">This archive contains some pictures in high resolution that can be used on website, social media and printed materials.</p>
             <p>[nbsp]</p>
-            <div class="download"><a href="files/eiuc/pphr/Media-Toolkit/mediatoolkit-pics-pphr.zip" target="_blank" download="Media-Toolkit-PICS.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/pphr/Media-Toolkit/mediatoolkit-pics-pphr.zip" target="_blank" download="Media-Toolkit-PICS.zip">Download</a></p>
+            <div class="download"><a href="files/eiuc/hrp/mediatoolkit/HRP-pictures-media-toolkit.zip" target="_blank" download="Media Kit Pictures - GC Human Rights Preparedness.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/hrp/mediatoolkit/HRP-pictures-media-toolkit.zip" target="_blank" download="Media Kit Pictures - GC Human Rights Preparedness.zip">Download</a></p>
             </div>
         </div>
     </div>
@@ -158,8 +126,8 @@
         <div class="list_accordion">
             <p class="margin_bottom_20">This document contains the newsletter that can be used on <a class="titolo_gc_europe" href="https://mailchimp.com" target="_blank">MailChimp</a> or any other Mass mailing system that supports HTML emails.</p>
             <p>[nbsp]</p>
-            <div class="download"><a href="files/eiuc/pphr/Media-Toolkit/newsletter-mooc-pphr.zip" download="Newsletter-HTML.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
-                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/pphr/Media-Toolkit/newsletter-mooc-pphr.zip" download="Newsletter-HTML.zip">Download</a></p>
+            <div class="download"><a href="files/eiuc/hrp/mediatoolkit/HRP-newsletter.zip" download="Newsletter - GC Human Rights Preparedness.zip"> <img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                <p class="titolo_gc_europe"><a class="download" href="files/eiuc/hrp/mediatoolkit/HRP-newsletter.zip" download="Newsletter - GC Human Rights Preparedness.zip">Download</a></p>
             </div>
         </div>
     </div>
