fixes to edx style, meet the team HRP, and visual about the dili report

--- a/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
+++ b/website/06-Stories-HRP/pages/02-meet-the-team-part3.html
@@ -223,7 +223,7 @@
 
         <p class="subtitle_page_programme lecturer_name">Anna Krasteva</p>
 
-        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_south_east_europe"><span class="titolo_gc_south_east_europe">Universidade Federal do Rio Grande do Sul</span></p>
+        <p class="ruolo_persona margin_bottom_20 centeredtext titolo_gc_south_east_europe"><span class="titolo_gc_south_east_europe">Policy and Citizens's Observatory: Migration, Digitalization, Climate</span></p>
 
         <p class="margin_bottom_20">Anna Krasteva is professor and member of the Board of ERMA (University of Sarajevo and University of Bologna), and a doctor honoris causa of the University of Lille. She led the Global Campus project, ‘Securitization and its impact on human rights and human security’. </p>
 
